--- a/build-automation-scripts/JenkinsFile
+++ b/build-automation-scripts/JenkinsFile
@@ -1,2 +1,26 @@
+pipeline {
+    agent any
 
-echo 'Hi There......Achhint'
+    stages {
+        stage('Hello1') {
+            steps {
+                echo 'Hello World1'
+            }
+        }
+        stage('Hello2') {
+            steps {
+                echo 'Hello World2'
+            }
+        }
+        stage('Hello3') {
+            steps {
+                echo 'Hello World3'
+            }
+        }
+        stage('Hello4') {
+            steps {
+                echo 'Hello World4'
+            }
+        }
+    }
+}
